# simple-pdf-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
pdfcli/: main.py  utils.py
src/pdfcli/: main.py  utils.py
src/pdfcli/commands/: compress.py  convert.py  encrypt.py  merge.py  reorder.py  split.py  trim.py
src/pdfcli/utils/: cli_utils.py  page_utils.py  validators.py
tests/: test_commands.py  test_utils.py
