[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdfcli"]

[tool.hatch.build]
exclude= [
  "tests"
]

[project]
name = "simple-pdf-cli"
version = "0.2.0"
requires-python = ">=3.8"
dependencies = [
  "pypdf>=6.3.0",
  "pdf2image>=1.17.0",
  "pillow>=12.0.0",
  "typer>=0.20.0",
  "rich>=14.2.0",
  "cryptography>=46.0.0",
  "natsort==8.4.0"
]
description = "A simple CLI app for basic PDF modifications."
authors = [
  { name = "Falachi"}
]
keywords = [
  "pdf",
  "cli",
  "pdf-tools",
  "merge-pdf",
  "pdf-trim",
  "pdf-to-image",
  "compress-pdf",
  "pdf-split",
  "pdf-encrypt",
  "pdf-decrypt",
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.urls]
Repository = "https://github.com/Falachi/simple-pdf-cli"

[project.scripts]
pdfcli = "pdfcli.main:app"

[project.optional-dependencies]
dev = ["pytest"]